# docs/openapi.json
@@ -6303,6 +6303,9 @@
 					"showDayPropertiesWidget": {
 						"type": "boolean"
 					},
+					"showRecipeSuggestionsWidget": {
+						"type": "boolean"
+					},
 					"widgetOrder": {
 						"type": "array",
 						"items": {
@@ -6313,6 +6316,7 @@
 								"chart",
 								"streaks",
 								"favorites",
+								"recipe-suggestions",
 								"supplements",
 								"weight",
 								"meal-breakdown",
@@ -9068,6 +9072,9 @@
 					"showDayPropertiesWidget": {
 						"type": "boolean"
 					},
+					"showRecipeSuggestionsWidget": {
+						"type": "boolean"
+					},
 					"widgetOrder": {
 						"type": "array",
 						"items": {
@@ -9155,6 +9162,7 @@
 					"showSleepWidget",
 					"showFastingWidget",
 					"showDayPropertiesWidget",
+					"showRecipeSuggestionsWidget",
 					"widgetOrder",
 					"mealOrder",
 					"startPage",
